<resources>
    <string name="app_name">Geekbrains Progect</string>
    <string name="login_hint">Логин</string>
    <string name="password_hint">Пароль</string>
    <string name="sign_in_text">Войти</string>
    <string name="registration_text">Регистрация</string>
    <string name="incorrectly_loggin_password">Не введен логин или пароль</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="goods_management">Товар</string>
    <string name="warehouse_management">Склад</string>
    <string name="personal_menegment">Персонал</string>
    <string name="product_statistic">Список товаров</string>
    <string name="nomenclature_menegment">Управление номенклатурой</string>
    <string name="create_new_warehouse">Создать новый склад</string>
    <string name="stock_bulance">Остатки складов</string>
    <string name="capitalize_goods">Оприходовать товар</string>
    <string name="to_ship_goods">Отгрузить товар</string>
    <string name="personal_list">Список персонала</string>
    <string name="transaction_list_user">Транзакции персонала</string>
    <string name="show_password">Показать пароль</string>
    <string name="error">Ошибка</string>
    <string name="ok">ОК</string>
    <string name="edit">Редактировать</string>
    <string name="delete">Удалить</string>
    <string name="fullname_hint">Полное имя</string>
    <string name="category_list">Категории товаров</string>
    <string name="search">Поиск</string>
    <string name="filter">Фильтр</string>
    <string name="search_hint">Поиск</string>
    <string name="count">Кол-во</string>
    <string name="new_supply">Новая поставка</string>
    <string name="new_shipment">Новая отгрузка</string>
    <string name="transactions_list">Список транзакций</string>
    <string name="supply">Поставка</string>
    <string name="shipment">отгрузка</string>
    <string name="provider">Поставщик</string>
    <string name="count_product">Кол-во продукта</string>
    <string name="contractor_supply">Поставщик</string>
    <string name="description_field">Описание: %1$s</string>
    <string name="category_field">Категория: %1$s</string>
    <string name="provider_field">Поставщики: %1$s</string>
    <string name="product_name_field">Продукт: %1$s</string>
    <string name="type_transaction_field">Тип: %1$s</string>
    <string name="comment_trasaction_field">Комментарий: %1$s</string>
    <string name="transaction_list">Транзакции товара</string>
    <string name="provider_field_transaction">Поставщик: %1$s</string>
    <string name="contractor_field_transaction">Кому: %1$s</string>
    <string name="operator">Оператор: %1$s</string>
    <string name="comment">Комментарий</string>
    <string name="units">Ед.изм.</string>
    <string name="edit_title">Редактирование</string>
    <string name="fullname_unit_hint">Полное имя / Описание</string>
    <string name="save_edit">Сохранить изменения</string>
    <string name="sort">Фильтр</string>
    <string name="open">Открыть</string>
    <string name="edit_sucsses">Изменение успешно сохранено!</string>
    <string name="transaction_sucesses">Транзакция прошла успешно!</string>
    <string name="alert">Внимание</string>
    <string name="alert_delete_message">Вы уверены, что хотите удалить эту позицию?</string>
    <string name="product_name">Наименование</string>
    <string name="description">Описание</string>
    <string name="category">Категория</string>
    <string name="create_product">Создание новой позиции</string>
    <string name="product_create_sucesses">Позиция успешно создана!</string>
    <string name="create_category">Создание категории</string>
    <string name="category_create_sucesses">Категория успешно создана!</string>
    <string name="contractors_lis">Список контрагентов</string>
    <string name="transactions_histiry">История операций</string>
    <string name="contractors_management">Контрагенты</string>
    <string name="user_deleted">Юзер успешно удален!</string>
    <string name="password_confirm">Продтвердите пароль</string>
    <string name="firstname">Имя</string>
    <string name="lastname">Фамилия</string>
    <string name="role">Роль</string>
    <string name="phone">Телефон</string>
    <string name="email">E-mail</string>
    <string name="user_added">Пользователь успешно добавлен!</string>
    <string name="contractors_added">Контрагент успешно добавлен!</string>
    <string name="user_edited">Юзер успешно изменен!</string>
    <string name="contractors_edit">Контрагент успешно изменен!</string>
    <string name="create_edit_contractor">Создание/редактирование контрагента</string>
    <string name="contractors_delete">Контрагент успешно удален!</string>
    <string name="add">Добавить</string>
    <string name="edit_category_product">Редактирвоание категорий продукта</string>
    <string name="category_delete_sucesses">Категория успешно удалена!</string>
</resources>