<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:title="@android:string/search_go"
        android:icon="@drawable/ic_search_black_24dp"
        app:showAsAction="always|collapseActionView"
        app:actionViewClass="android.widget.SearchView" />
    <item
        android:id="@+id/open"
        android:title="@string/open"
        android:icon="@drawable/open_icon"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_sort"
        android:icon="@drawable/sort_icon"
        android:title="@string/sort"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_remove"
        android:title="@string/delete"
        android:icon="@drawable/delete_icon"
        app:showAsAction="ifRoom" />
</menu>