<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_goods">

    <fragment
        android:id="@+id/navigation_goods"
        android:name="com.geekbrains.geekbrainsprogect.ui.product.view.ProductFragment"
        android:label="@string/goods_management"
        tools:layout="@layout/fragment_goods" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_dashboard"
            app:destination="@id/navigation_warehouse" />
    </fragment>

    <fragment
        android:id="@+id/navigation_warehouse"
        android:name="com.geekbrains.geekbrainsprogect.ui.warehouse.view.WarehouseFragment"
        android:label="@string/warehouse_management"
        tools:layout="@layout/fragment_warehouse" >
        <action
            android:id="@+id/action_navigation_dashboard_to_navigation_notifications"
            app:destination="@id/navigation_personal" />
    </fragment>

    <fragment
        android:id="@+id/navigation_personal"
        android:name="com.geekbrains.geekbrainsprogect.ui.personal.view.PersonalFragment"
        android:label="@string/personal_menegment"
        tools:layout="@layout/fragment_personal" />
</navigation>